# qtimew

./: CMakeLists.txt  Main.qml  README.md  main.cpp  timeentry.cpp  timeentry.h  timew.cpp  timew.h
.github/workflows/: build.yml
qml/: BaseView.qml  DateTimePicker.qml  DummyEntry.qml  EditEntry.qml  EditTimeDate.qml  Functions.js  MyDateTime.qml  MyText.qml  MyTextField.qml  TagsViewer.qml  Test.qml  TextClickable.qml
src/: CMakeLists.txt  main.cpp  qTimeW.desktop  qml.qrc  timeentry.h  timew.cpp  timew.h
src/icons/: icons.qrc
src/qml/: BaseView.qml  MyText.qml  TagsViewer.qml  Test.qml
